--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
-    "idb": "^5.0.4"
+    "@types/ramda": "^0.27.11",
+    "lodash": "^4.17.19",
+    "prettier": "^2.0.5",
+    "ramda": "^0.27.0",
+    "ts-di-injector": "0.0.1"
   }
 }
