--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "ts-loader": "^8.0.1",
-    "typescript": "^3.9.7",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12"
-  },
   "dependencies": {
-    "@types/ramda": "^0.27.11",
     "lodash": "^4.17.19",
     "prettier": "^2.0.5",
     "ramda": "^0.27.0",
-    "ts-di-injector": "0.0.1"
+    "ts-di-injector": "0.1.1",
+    "webpack": "^4.44.0",
+    "webpack-cli": "^3.3.12"
+  },
+  "devDependencies": {
+    "@types/ramda": "^0.27.11",
+    "ts-loader": "^8.0.1",
+    "typescript": "3.7.5"
   }
 }
