--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "lodash": "^4.17.19",
     "prettier": "^2.0.5",
     "ramda": "^0.27.0",
+    "tapable": "^1.1.3",
     "ts-di-injector": "0.1.1",
     "webpack": "^4.44.0",
     "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
     "@types/ramda": "^0.27.11",
+    "@types/tapable": "^1.0.6",
     "ts-loader": "^8.0.1",
     "typescript": "3.7.5"
   }
