--- a/package.json
+++ b/package.json
@@ -4,24 +4,26 @@
   "description": "",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack -w"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "lodash": "^4.17.19",
-    "prettier": "^2.0.5",
     "ramda": "^0.27.0",
     "tapable": "^1.1.3",
-    "ts-di-injector": "0.1.1",
-    "webpack": "^4.44.0",
-    "webpack-cli": "^3.3.12"
+    "ts-di-injector": "0.1.1"
   },
   "devDependencies": {
     "@types/ramda": "^0.27.11",
     "@types/tapable": "^1.0.6",
+    "eslint-import-resolver-webpack": "^0.12.2",
+    "eslint-plugin-import": "^2.22.0",
+    "prettier": "^2.0.5",
     "ts-loader": "^8.0.1",
-    "typescript": "3.7.5"
+    "typescript": "3.7.5",
+    "webpack": "^4.44.0",
+    "webpack-cli": "^3.3.12"
   }
 }
