--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/tapable": "^1.0.6",
     "eslint-import-resolver-webpack": "^0.12.2",
     "eslint-plugin-import": "^2.22.0",
+    "express": "^4.17.1",
     "prettier": "^2.0.5",
     "ts-loader": "^8.0.1",
     "typescript": "3.7.5",
